# Should only contain new features not ports from features we already had in the KDE 3 version

Changes in 3.0dev :
- Added option to select the network interface to use
- Added option to disable data checking during uploading
- Added possibility to open multiple torrents in one go (they will be opened
silently)
- Added option to do a data check when a torrent is finished
- Added new missing files dialog with quit button
- Added support for hostnames in PeerManager::addPotentialPeer
- Added IPv6 support
- Remember current searches in searchplugin and restore them on restart
