@@ -70,7 +70,7 @@ namespace kt
 		*/
 		void updateDNDInformation();
 
-		virtual kt::FileTreeItem* newFileTreeItem(const QString & name, kt::TorrentFileInterface & file);
+		virtual kt::FileTreeItem* newFileTreeItem(const QString & name, kt::TorrentFileInterface & file,kt::DeselectOptions options);
 		virtual kt::FileTreeDirItem* newFileTreeDirItem(const QString & subdir);
 	};
 }
